Fix database implementation